# vint

./: .coveragerc  .gitignore  .gitmodules  .landscape.yml  .pre-commit-hooks.yaml  .travis.yml  CONTRIBUTING.markdown  CONTRIBUTING.md  CONTRIBUTING.rst  CONTROBUTING.markdown  Gruntfile.coffee  MANIFEST.in  README.markdown  README.md  README.rst  README_ja.markdown  config.js  package.json  playground.js  policy.js  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  vimlparser.js  vint.py
.github/workflows/: ci.yml
asset/: default_config.yaml
ast/: traverse.js
compat/itertools/: __init__.py
compat/unittest/: __init__.py
dev_tool/: qa  qa.sh  show_ast.py  show_chardet_result.py  show_encoding.py  show_scope.py
extlib/: vimlparser.py
lib/: config.js  level.js  lint.js
lib/ast/: node_type.py  nodetype.js  nodetype.py  traversing.py
lib/linting/: level.py  linter.py
lib/policy/: prohibit_unnecessary_double_quote.js
lib/reporter/: reporter.js
policy/: policy.js  prohibit_unnecessary_double_quote.js
reference/: google_vim_script_style_guide.js
src/: config.coffee  level.coffee  lint.coffee  policy.coffee
src/ast/: nodetype.coffee  parser.coffee  traverse.coffee
src/policy/: prohibit_unnecessary_double_quote.coffee
src/reference/: google_vim_script_style_guide.coffee
src/reporter/: reporter.coffee
test/acceptance/: test_cli.py  test_cli_vital.py
test/asserting/: ast.py  config_source.py  env_factory.py  formatter.py  policy.py
vint/: __init__.py  __version__.py  asset.py  bootstrap.py  encoding.py  env.py
(+325 files in other folders)
