[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE.txt
description-file = README.markdown

[check-manifest]
ignore =
  bin/*
  dev_tool/*
  test/fixture/cli/vital.vim/*
  CONTRIBUTING.rst
  codecov.yml
  .coveragerc
  .landscape.yml

[flake8]
max-line-length = 100
exclude = vint/_bundles/*
ignore = E303

[tool:pytest]
testpaths = test
addopts = -ra
